Jann 30/objects/GS1_LookupDefinitions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Fields__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>Separated by comma (,)</description>
        <label>Display Fields</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_Filter_Expression__c</fullName>
        <defaultValue>&quot;IsDeleted=false AND Active__c=true&quot;</defaultValue>
        <description>ex: NAME like &apos;coca%&apos;</description>
        <label>Fixed Filter Expression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Variable_Filter_Expression__c</fullName>
        <description>Value is dependent on filters setup in the lookup fields

ex: User = &apos;{!param1}&apos;</description>
        <label>Variable Filter Expression</label>
        <type>TextArea</type>
    </fields>
    <label>GS1 Lookup Definitions</label>
</CustomObject>